--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "nip24/client",
 	"description": "NIP24 Client for PHP",
 	"type": "library",
-	"keywords": [ "nip24", "api", "vat", "nip", "regon", "krs", "iban", "ceidg", "gus", "eu", "vies", "validator" ],
+	"keywords": [ "nip24", "api", "vat", "nip", "regon", "krs", "iban", "whitelist", "ceidg", "gus", "eu", "vies", "validator" ],
 	"license": "Apache-2.0",
 	"homepage": "https://nip24.pl",
 	"authors": [
@@ -12,11 +12,13 @@
             "homepage": "https://netcat.pl"
         }
     ],
-	"minimum-stability": "stable",
     "autoload": {
         "psr-4": { "NIP24\\": "NIP24/" }
     },
     "require": {
-		"php": ">=5.6"
+		"php": ">=5.6",
+        "ext-simplexml": "*",
+        "ext-openssl": "*",
+        "ext-curl": "*"
     }
 }
