--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"php": ">=5.6",
         "ext-simplexml": "*",
         "ext-openssl": "*",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-json": "*"
     }
 }
